[gd_scene load_steps=7 format=3 uid="uid://b2vf60r78lpll"]

[ext_resource type="Script" path="res://Scripts/Handle.gd" id="1_40sln"]
[ext_resource type="Theme" uid="uid://cvfdhnvtm15xt" path="res://Themes/DialogTheme.tres" id="1_wrihu"]
[ext_resource type="Texture2D" uid="uid://c6nmm3uflilid" path="res://Images/Trash24x24.png" id="2_70euy"]
[ext_resource type="Texture2D" uid="uid://dwvv3choha6q0" path="res://Images/Chain24x24.png" id="2_p7bvd"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_s0glk"]

[sub_resource type="LabelSettings" id="LabelSettings_rggqa"]
font_size = 14

[node name="Handle" type="MarginContainer"]
offset_right = 535.0
offset_bottom = 32.0
theme = ExtResource("1_wrihu")
script = ExtResource("1_40sln")

[node name="HandleSep" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="HandleTitle" type="LineEdit" parent="HandleSep"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
focus_mode = 1
theme_override_styles/focus = SubResource("StyleBoxEmpty_s0glk")
text = "New Handle"
alignment = 2
flat = true
select_all_on_focus = true

[node name="AttachButton" type="Button" parent="HandleSep"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
focus_mode = 1
icon = ExtResource("2_p7bvd")
icon_alignment = 1

[node name="DeleteButton" type="Button" parent="HandleSep"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
focus_mode = 1
icon = ExtResource("2_70euy")
icon_alignment = 1

[node name="HandleValue" type="LineEdit" parent="HandleSep"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.75
theme = ExtResource("1_wrihu")
theme_override_colors/selection_color = Color(0.12549, 0.584314, 0.752941, 1)
clear_button_enabled = true

[node name="FilePathScroll" type="ScrollContainer" parent="HandleSep"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5

[node name="FilePathText" type="Label" parent="HandleSep/FilePathScroll"]
layout_mode = 2
size_flags_horizontal = 3
text = "Unlinked"
label_settings = SubResource("LabelSettings_rggqa")
vertical_alignment = 1
